# RAG-based-Q-A-system

./: README.md  pyproject.toml  requirements.txt
notebook/: agent.ipynb
