[project]
name = "rag1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arxiv>=2.2.0",
    "chromadb>=1.3.0",
    "faiss-cpu>=1.12.0",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "langchain>=1.0.3",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.2",
    "langchain-groq>=1.0.0",
    "langchain-huggingface>=1.0.0",
    "langchain-mistralai>=1.0.1",
    "langchain-openai>=1.0.1",
    "langchainhub>=0.1.21",
    "langgraph>=1.0.2",
    "langserve>=0.3.3",
    "pymupdf>=1.26.5",
    "pypdf>=6.1.3",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.1.2",
    "typesense>=1.1.1",
    "wikipedia>=1.4.0",
]
